<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_search_name">Поиск</string>
    <string name="button_library_name">Медиатека</string>
    <string name="button_settings_name">Настройки</string>
    <string name="library_name">Медиатека</string>

    <string name="settings_dark_mode">Темная тема</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>

    <string name="share_app_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_app_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="share_app_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_app_email">inna27.02@yandex.ru</string>

    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_hint">Поиск</string>
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_update">Обновить</string>
    <string name="search_history_header">Вы искали</string>
    <string name="search_clear_history">Очистить историю</string>

    <string name="player_track_time">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_release_date">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>

    <string name="library_favorites">Избранные треки</string>
    <string name="library_playlists">Плейлисты</string>
    <string name="library_favorites_empty">Ваша медиатека пуста</string>
    <string name="library_playlists_empty">Вы не создали ни одного плейлиста</string>
    <string name="library_new_playlist">Новый плейлист</string>

    <string name="newPlaylist_header_text">Новый плейлист</string>
    <string name="newPlaylist_question_title">Завершить создание плейлиста?</string>
    <string name="newPlaylist_question_message">Все несохраненные данные будут потеряны</string>
    <string name="newPlaylist_question_cancel_button">Отмена</string>
    <string name="newPlaylist_question_save_button">Завершить</string>
    <string name="newPlaylist_playlist_covers_folder">playlists_covers</string>
    <string name="newPlaylist_create_button">Создать</string>
    <string name="newPlaylist_name_hint">Название*</string>
    <string name="newPlaylist_description_hint">Описание</string>
    <string name="bottom_sheet_title">Добавить в плейлист</string>

    <string name="playlist_insert_track_message">Добавлено в плейлист </string>
    <string name="playlist_insert_track_cancel_message">Трек уже добавлен в плейлист </string>

    <string name="current_playlist_duration_text">минут</string>
    <string name="current_playlist_size_text">треков</string>
    <string name="current_playlist_question_title">Удалить трек</string>
    <string name="current_playlist_question_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="current_playlist_question_cancel">Отмена</string>
    <string name="current_playlist_question_delete">Удалить</string>
    <string name="current_playlist_share_empty">В этом плейлисте нет списка треков, которыми можно поделиться</string>
    <string name="current_playlist_empty">В плейлисте нет треков</string>

    <string name="current_playlist_delete_question_title">Удалить плейлист?</string>
    <string name="current_playlist_delete_question_message">"Хотите удалить плейлист «%s»?</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>


    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>





    <plurals name="tracks_plurals">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_plurals">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>