<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical">

    <LinearLayout style="@style/HeaderLayoutStyle"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/fl_search_back"
            style="@style/HeaderIconLayoutStyle">

            <ImageView style="@style/HeaderIconStyle"/>
        </FrameLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/button_search_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/search_margin_sides"
        android:layout_marginEnd="@dimen/search_margin_sides"
        android:background="@drawable/bg_search_rectangle"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_sides"
        android:paddingEnd="@dimen/padding_sides">

        <ImageView
            style="@style/SearchEditTextIconStyle"
            android:src="@drawable/ic_search"
            app:tint="?attr/search_color"/>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:background="?attr/background_search_color"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/deep_gray"
            android:textColorHint="?attr/search_color"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/iv_search_clear"
            style="@style/SearchEditTextIconStyle"
            android:src="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"/>

        <LinearLayout
            android:id="@+id/search_no_internet_layout"
            style="@style/SearchInfoLayoutStyle"
            android:visibility="gone"
            android:orientation="vertical">

            <ImageView
                style="@style/SearchInfoIconStyle"
                android:background="@drawable/ic_no_internet"/>

            <TextView
                style="@style/SearchInfoTextStyle"
                android:text="@string/search_no_internet"/>

            <Button android:id="@+id/search_update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_medium"
                android:textAllCaps="false"
                android:textColor="?attr/search_update_text_color"
                android:textSize="16sp"
                app:cornerRadius="54dp"
                android:backgroundTint="?attr/search_update_background_color"
                android:text="@string/search_update"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_nothing_found_layout"
            style="@style/SearchInfoLayoutStyle"
            android:visibility="gone"
            android:orientation="vertical">

            <ImageView
                style="@style/SearchInfoIconStyle"
                android:background="@drawable/ic_nothing_found"/>

            <TextView
                style="@style/SearchInfoTextStyle"
                android:text="@string/search_nothing_found"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>