<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingStart="@dimen/padding_title_left"
        android:paddingTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_left"
        android:paddingTop="@dimen/padding_title_content"
        android:paddingEnd="@dimen/padding_right"
        android:paddingBottom="24dp">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_search_name"
            android:textAllCaps="false"
            android:textColor="@color/deep_gray"
            android:textSize="@dimen/main_button_text_size"
            app:cornerRadius="@dimen/main_buttons_corner_radius"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_text_padding"
            app:iconSize="@dimen/main_icon_size"
            app:iconTint="@color/deep_gray" />

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_library_name"
            android:textAllCaps="false"
            android:textColor="@color/deep_gray"
            android:textSize="@dimen/main_button_text_size"
            app:cornerRadius="@dimen/main_buttons_corner_radius"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_text_padding"
            app:iconSize="@dimen/main_icon_size"
            app:iconTint="@color/deep_gray" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_settings_name"
            android:textAllCaps="false"
            android:textColor="@color/deep_gray"
            android:textSize="@dimen/main_button_text_size"
            app:cornerRadius="@dimen/main_buttons_corner_radius"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_text_padding"
            app:iconSize="@dimen/main_icon_size"
            app:iconTint="@color/deep_gray" />
    </LinearLayout>

</LinearLayout>